--- a/lecture8/pset8/homepage/styles.css
+++ b/lecture8/pset8/homepage/styles.css
@@ -33,9 +33,12 @@
 
 @media (min-width: 1400px) {
     .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-        max-width: 1320px;
         max-width: 1000px;
     }
+}
+
+textarea {
+  resize: none;
 }
 /* main {
     position: absolute;
