--- a/lecture9/lab9/birthdays/templates/index.html
+++ b/lecture9/lab9/birthdays/templates/index.html
@@ -15,6 +15,12 @@
 
                 <h2>Add a Birthday</h2>
                 <!-- TODO: Create a form for users to submit a name, a month, and a day -->
+                <form action="" method="post">
+                    <input autocomplete="off" name="name" placeholder="Name" type="text" required>
+                    <input autocomplete="off" name="month" placeholder="Month" type="text" required>
+                    <input autocomplete="off" name="day" placeholder="Day" type="text" required>
+                    <input type="submit">
+                </form>
             </div>
 
             <div class="section">
@@ -29,6 +35,13 @@
                     </thead>
                     <tbody>
                         <!-- TODO: Loop through the database entries to display them in this table -->
+                        {% for person in birthdays_data %}
+                        <tr>
+                            <td>{{ person["name"] }}</td>
+                            <td>{{ person["month"] }}/{{ person["day"] }}</td>
+                        </tr>
+                        {% endfor %}
+
                     </tbody>
                 </table>
             </div>
