pset9 added delete function

--- a/lecture9/lab9/birthdays/templates/index.html
+++ b/lecture9/lab9/birthdays/templates/index.html
@@ -39,6 +39,13 @@
                         <tr>
                             <td>{{ person["name"] }}</td>
                             <td>{{ person["month"] }}/{{ person["day"] }}</td>
+                            <td>
+                                <form action="/delete" method="post">
+                                    <input name="id" type="hidden" value="{{ person['id'] }}">
+                                    <input type="submit" value="Delete">
+                                </form>
+                            </td>
+
                         </tr>
                         {% endfor %}
 
