--- a/lecture9/lab9/birthdays/static/styles.css
+++ b/lecture9/lab9/birthdays/static/styles.css
@@ -55,12 +55,12 @@ button, input[type="submit"] {
     vertical-align: middle;
 }
 
-input[type="text"], input[type="number"] {
+input[type="text"], input[type="date"] {
     line-height: 1.8;
     width: 25%;
 }
 
-input[type="text"]:hover, input[type="number"]:hover {
+input[type="text"]:hover, input[type="date"]:hover {
     background-color: #f5f5f5;
     transition: color 2s ease-in-out, background-color 0.15s ease-in-out;
 }
@@ -81,3 +81,8 @@ tbody tr:nth-of-type(odd) {
     background-color: rgb(179, 208, 255, 0.3)
 }
 
+input[type="submit"].delete {
+    background-color: rgba(255, 25, 25, 0.1);
+    color: red;
+    border-color: red;
+}
