--- a/lecture9/lab9/birthdays/templates/index.html
+++ b/lecture9/lab9/birthdays/templates/index.html
@@ -14,11 +14,10 @@
             <div class="section">
 
                 <h2>Add a Birthday</h2>
-                <!-- TODO: Create a form for users to submit a name, a month, and a day -->
+                <!-- Create a form for users to submit a name, a month, and a day -->
                 <form action="" method="post">
                     <input autocomplete="off" name="name" placeholder="Name" type="text" required>
-                    <input autocomplete="off" name="month" placeholder="Month" type="text" required>
-                    <input autocomplete="off" name="day" placeholder="Day" type="text" required>
+                    <input autocomplete="off" name="date" type="date" required>
                     <input type="submit">
                 </form>
             </div>
@@ -34,7 +33,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <!-- TODO: Loop through the database entries to display them in this table -->
+                        <!-- Loop through the database entries to display them in this table -->
                         {% for person in birthdays_data %}
                         <tr>
                             <td>{{ person["name"] }}</td>
@@ -42,7 +41,7 @@
                             <td>
                                 <form action="/delete" method="post">
                                     <input name="id" type="hidden" value="{{ person['id'] }}">
-                                    <input type="submit" value="Delete">
+                                    <input type="submit" class="delete" value="Delete">
                                 </form>
                             </td>
 
