--- a/lecture9/pset9/finance/templates/quote.html
+++ b/lecture9/pset9/finance/templates/quote.html
@@ -6,10 +6,12 @@
 
 {% block main %}
     <h1 class="h1 fw-bold mb-5">Search a stock</h1>
-    <form action="/quote" method="post">
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="query" name="query" placeholder="Symbol" type="text">
-        </div>
-        <button class="btn btn-primary" type="submit">Search</button>
-    </form>
+    <div class="form-group mx-auto w-25">
+        <form action="/quote" method="post">
+            <div class="mb-3">
+                <input autocomplete="off" autofocus class="form-control mx-auto w-100" id="query" name="query" placeholder="Symbol" type="text">
+            </div>
+            <button class="btn btn-primary" type="submit">Search</button>
+        </form>
+    </div>
 {% endblock %}
