--- a/lecture9/pset9/finance/templates/history.html
+++ b/lecture9/pset9/finance/templates/history.html
@@ -7,7 +7,7 @@
 {% block main %}
     <h1 class="h1 fw-bold mb-3">History</h1>
     <div class="container mw-80">
-        <table class="table table-borderless">
+        <table class="table table-striped">
             <thead>
                 <tr>
                     <th scope="col" class="text-start">Date</th>
