--- a/lecture10/pset10/templates/index.html
+++ b/lecture10/pset10/templates/index.html
@@ -1,1 +1,21 @@
-hello index
+<!DOCTYPE html>
+
+<html lang="en">
+
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="initial-scale=1, width=device-width">
+
+        <!-- take icons -->
+        {% block link %}{% endblock %}
+
+        <!-- https://favicon.io/emoji-favicons/magnifying-glass-tilted-left/ -->
+        <link href="/static/favicon.ico" rel="icon">
+
+        <title>qr.eat: {% block title %}{% endblock %}</title>
+    </head>
+
+    <body>
+    </body>
+</html>
+
