--- a/lecture10/pset10/templates/layout.html
+++ b/lecture10/pset10/templates/layout.html
@@ -11,19 +11,19 @@
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
         <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
 
-        <!-- https://favicon.io/emoji-favicons/money-bag/ -->
+        <!-- https://favicon.io/emoji-favicons/spaghetti/ -->
         <link href="/static/favicon.ico" rel="icon">
 
         <link href="/static/styles.css" rel="stylesheet">
 
-        <title>AppetiEats: {% block title %}{% endblock %}</title>
+        <title>AppetiEats</title>
 
     </head>
 
     <body>
         <nav class="navbar navbar-expand-sm navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand m-0" href="/">AppetiEat</a>
+                <a class="navbar-brand m-0" href="/">AppetiEats</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -33,21 +33,22 @@
                         <li class="nav-item"><a class="nav-link" href="#prices">Prices</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     </ul>
-                    <ul class="navbar-nav ms-auto mt-2">
-                        <li class="nav-item"><a class="btn button" href="/login">Login</a></li>
-                    </ul>
                 </div>
             </div>
         </nav>
+        
+        <div>
+            Enhance customer experience with AppetiEats
+        </div>
 
         <main class="container-fluid py-5 text-center">
             {% block main %}{% endblock %}
         </main>
 
-        <footer class="mb-5 mt-5 small text-center text-muted">
+        <!--         <footer class="mb-5 mt-5 small text-center text-muted">
             Powered by <a href="https://github.com/valentejorge/">valentejorge</a>
         </footer>
-
+        -->
     </body>
 
 </html>
