update: style.css

--- a/lecture10/pset10/templates/layout.html
+++ b/lecture10/pset10/templates/layout.html
@@ -36,16 +36,24 @@
                 </div>
             </div>
         </nav>
-        
-        <div>
-            Enhance customer experience with AppetiEats
-        </div>
 
+        <session class="home">
+        <div class="home-text">
+            <p class="text-p">An tool made for put your restaurant in other level</p>
+            <h1 class="text-h1">Enhance customer experience with <span class="logo">AppetiEats</span></h1>
+            <a href="#data_test" class="btn button-s mt-4">Try it</a>
+            <a href="#data_test" class="btn button mt-4">Join us</a>
+        </div>
+        <div class="home-img">
+            <img class="phone-img" src="static/phone.png" alt="appetiEats app image">
+        </div>
+        </session>
+
+<!--
         <main class="container-fluid py-5 text-center">
             {% block main %}{% endblock %}
         </main>
-
-        <!--         <footer class="mb-5 mt-5 small text-center text-muted">
+                 <footer class="mb-5 mt-5 small text-center text-muted">
             Powered by <a href="https://github.com/valentejorge/">valentejorge</a>
         </footer>
         -->
