--- a/lecture10/pset10/static/styles.css
+++ b/lecture10/pset10/static/styles.css
@@ -1,11 +1,13 @@
 .container-fluid {
-    width: 90%;
+    padding: 0 5%;
 }
 .button {
     background-color: #ff0000;
-    color: white !important;
+    font-size: 1.5rem;
+    color: #fff !important;
     border-radius: 10px;
     border-color: #ff0000;
+    transition: all 0.3s;
 }
 .button:hover {
     color: #fff;
@@ -19,6 +21,28 @@
     border-color: #cc0000;
     box-shadow: 0 0 0 0.2rem rgba(204, 0, 0, 0.5);
 }
+.button-s {
+    background-color: #fff;
+    color: #ff0000 !important;
+    border-radius: 10px;
+    border-color: #ff0000;
+    transition: all 0.3s;
+    border: 1px solid;
+    font-size: 1.5rem;
+}
+.button-s:hover {
+    color: #fff;
+    background-color: rgba(255, 0, 0, 0.1);
+    /*border-color: rgba(255, 0, 0, 0.1);*/
+}
+.button-s:focus,
+.button-s.focus {
+    color: #fff;
+    background-color: rgba(255, 0, 0, 0.1);
+    background-color: #fff;
+    border-color: #ee0000;
+    box-shadow: 0 0 0 0.2rem rgba(255, 0, 0, 0.3);
+}
 
 .navbar-red {
     background-color: #ffffff;
@@ -28,4 +52,57 @@
 }
 .navbar-brand {
     color: #ff0000 !important;
+}
+.home {
+    width: 100%;
+    height: 85vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-between;
+    padding: 0px 10%;
+}
+.logo {
+    font-weight: 500;
+    color: #ff0000;
+}
+.phone-img {
+    max-height: 500px;
+}
+.home-text {
+    max-width: 37rem;
+}
+.home-text .text-h1 {
+    font-size: 4rem;
+    margin: 0 auto;
+}
+.home-text .text-p {
+    font-size: 1.5rem;
+    margin: 0 auto;
+}
+
+@media (max-width:785px) {
+    .home {
+        padding: 30px 2%;
+        flex-direction: column;
+        text-align: center;
+        /*overflow: hidden;*/
+        gap: 1rem;
+    }
+    .home-text {
+        max-width: 25rem;
+    }
+    .home-text .text-h1 {
+        font-size: 2rem;
+    }
+    .home-text .text-p {
+        font-size: 15px;
+        margin: 0 auto;
+    }
+    .button-s {
+        font-size: 1rem;
+    }
+    .button {
+        font-size: 1rem;
+    }
 }
