--- a/lecture10/pset10/appetieats/templates/register.html
+++ b/lecture10/pset10/appetieats/templates/register.html
@@ -37,17 +37,48 @@
             </div>
         </nav>
 
-        <session class="home">
-        <div class="home-text">
-            <p class="text-p">An tool made for put your restaurant in other level</p>
-            <h1 class="text-h1">Enhance customer experience with <span class="logo">AppetiEats</span></h1>
-            <a href="#data_test" class="btn button-s mt-4">Try it</a>
-            <a href="/register" class="btn button mt-4">Join us</a>
+        <div class="container">
+            <div class="form-image">
+                <img src="static/undraw_cooking_p7m1.svg" alt="cooking image">
+            </div>
+            <div class="form">
+                <form action="#">
+                    <div class="form-header">
+                        <div class="title">
+                            <h1>Register</h1>
+                        </div>
+                        <div class="login-button">
+                            <button class="btn" ><a class="btn button" href="#login">Login</a></button>
+                        </div>
+
+                    </div>
+
+                        <label for="username" class="">Username: </label>
+                        <input name="username" class="form-control mx-auto w-auto" type="text" required>
+                        <input name="password" type="password" class="form-control" required>
+                        <input name="confirmation" type="password" class="form-control" required>
+                        <button class="btn button" type="submit">Register</button>
+
+                </form>
+            </div>
+
         </div>
-        <div class="home-img">
-            <img class="phone-img" src="static/phone.png" alt="appetiEats app image">
-        </div>
-        </session>
+        <main>
+            <h1 class="">Create Account</h1>
+            <form action="/register" method="post" class="needs-validation" novalidate>
+                <div class="">
+                    <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text" value="" required>
+                </div>
+                <div class="mb-3">
+                    <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password" value="" required>
+                </div>
+                <div class="mb-3">
+                    <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Confirm password" type="password" value="" required>
+                </div>
+                <button class="btn btn-primary" type="submit">Register</button>
+            </form>
+
+        </main>
 
 <!--
         <main class="container-fluid py-5 text-center">
