fix: display web app

--- a/lecture10/pset10/appetieats/static/register.css
+++ b/lecture10/pset10/appetieats/static/register.css
@@ -19,6 +19,8 @@ main {
     justify-content: center;
     align-items: center;
     background-color: #fde3a7d7;
+    background-color: #FF4D4D4a;
+    background-color: #FF000011;
     padding: 1rem;
     border-radius: 30px;
 }
