--- a/lecture10/pset10/appetieats/templates/register.html
+++ b/lecture10/pset10/appetieats/templates/register.html
@@ -54,7 +54,7 @@
                             </div>
 
                             <div class="login-button">
-                                <a href="#login">Login</a>
+                                <a href="/login">Login</a>
                             </div>
                         </div>
 
