--- a/lecture10/pset10/appetieats/templates/register.html
+++ b/lecture10/pset10/appetieats/templates/register.html
@@ -1,112 +1,35 @@
-<!DOCTYPE html>
+{% extends "layout-login-form.html" %}
 
-<html lang="en">
+{% block form %}
+<div class="form">
+    <form action="#">
+        <div class="form-header">
 
-    <head>
-
-        <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1, width=device-width">
-
-        <!-- http://getbootstrap.com/docs/5.1/ -->
-        <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
-        <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
-
-        <!-- https://favicon.io/emoji-favicons/spaghetti/ -->
-        <link href="/static/favicon.ico" rel="icon">
-
-        <link href="/static/styles.css" rel="stylesheet">
-        <link href="/static/register.css" rel="stylesheet">
-
-        <title>AppetiEats</title>
-
-    </head>
-
-    <body>
-        <nav class="navbar navbar-expand-sm navbar-light">
-            <div class="container-fluid">
-                <a class="navbar-brand m-0" href="/">AppetiEats</a>
-                <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbar">
-                    <ul class="navbar-nav ms-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#prices">Prices</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-        <main>
-            <div class="container-c">
-
-                <div class="form-image">
-                    <img src="static/undraw_cooking_p7m1.svg" alt="cooking image">
-                </div>
-
-                <div class="form">
-                    <form action="#">
-                        <div class="form-header">
-
-                            <div class="title">
-                                <h1>Register</h1>
-                            </div>
-
-                            <div class="login-button">
-                                <a href="/login">Login</a>
-                            </div>
-                        </div>
-
-                        <div class="input-g">
-                            <div class="input-b">
-                                <label for="username" class="">Username: </label>
-                                <input id="username" name="username" class="" type="text" placeholder="Type your username" required>
-                            </div>
-
-                            <div class="input-b">
-                                <label for="password" class="">Password: </label>
-                                <input id="password" name="password" class="" type="password" placeholder="Type your password" required>
-                            </div>
-
-                            <div class="input-b">
-                                <label for="confirm" class="">Confirm password: </label>
-                                <input id="confirm" name="confirm" type="password" placeholder="Confirm your password" required>
-                            </div>
-                        </div>
-                            <button class="btn button-sm" type="submit">Register</button>
-                    </form>
-                </div>
+            <div class="title">
+                <h1>Register</h1>
             </div>
 
-        </main>
-<!--
-        <main>
-            <h1 class="">Create Account</h1>
-            <form action="/register" method="post" class="needs-validation" novalidate>
-                <div class="">
-                    <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text" value="" required>
-                </div>
-                <div class="mb-3">
-                    <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password" value="" required>
-                </div>
-                <div class="mb-3">
-                    <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Confirm password" type="password" value="" required>
-                </div>
-                <button class="btn btn-primary" type="submit">Register</button>
-            </form>
+            <div class="login-button">
+                <a href="/login">Login</a>
+            </div>
+        </div>
 
-        </main>
--->
+        <div class="input-g">
+            <div class="input-b">
+                <label for="username" class="">Username: </label>
+                <input id="username" name="username" class="" type="text" placeholder="Type your username" required>
+            </div>
 
-<!--
-        <main class="container-fluid py-5 text-center">
-            {% block main %}{% endblock %}
-        </main>
-                 <footer class="mb-5 mt-5 small text-center text-muted">
-            Powered by <a href="https://github.com/valentejorge/">valentejorge</a>
-        </footer>
--->
-    </body>
+            <div class="input-b">
+                <label for="password" class="">Password: </label>
+                <input id="password" name="password" class="" type="password" placeholder="Type your password" required>
+            </div>
 
-</html>
+            <div class="input-b">
+                <label for="confirm" class="">Confirm password: </label>
+                <input id="confirm" name="confirm" type="password" placeholder="Confirm your password" required>
+            </div>
+        </div>
+        <button class="btn button-sm" type="submit">Register</button>
+    </form>
+{% endblock %}
