update: register page

--- a/lecture10/pset10/appetieats/templates/register.html
+++ b/lecture10/pset10/appetieats/templates/register.html
@@ -2,7 +2,7 @@
 
 {% block form %}
 <div class="form">
-    <form action="#">
+    <form method="post" action="/register" >
         <div class="form-header">
 
             <div class="title">
