--- a/lecture10/pset10/appetieats/templates/layout-login-form.html
+++ b/lecture10/pset10/appetieats/templates/layout-login-form.html
@@ -21,6 +21,17 @@
 
 
     </head>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    <header>
+        {% for category, message in messages %}
+        <div class="alert alert-{{ category }} mb-0 text-center" role="alert">
+            {{ message }}
+        </div>
+        {% endfor %}
+    </header>
+    {% endif %}
+    {% endwith %}
 
     <body>
         <nav class="navbar navbar-expand-sm navbar-light">
