feature: register, login and logout

--- a/lecture10/pset10/appetieats/templates/layout-login-form.html
+++ b/lecture10/pset10/appetieats/templates/layout-login-form.html
@@ -44,7 +44,7 @@
             <div class="container-c">
 
                 <div class="form-image">
-                    <img src="static/undraw_cooking_p7m1.svg" alt="cooking image">
+                    {% block img %}{% endblock %}
                 </div>
                 {% block form %}{% endblock %}
             </div>
