--- a/lecture10/pset10/appetieats/templates/register.html
+++ b/lecture10/pset10/appetieats/templates/register.html
@@ -1,4 +1,7 @@
 {% extends "layout-login-form.html" %}
+{% block img %}
+<img src="static/undraw_cooking_p7m1.svg" alt="cooking image">
+{% endblock %}
 
 {% block form %}
 <div class="form">
