fix: buttons class

--- a/lecture10/pset10/appetieats/templates/register.html
+++ b/lecture10/pset10/appetieats/templates/register.html
@@ -33,6 +33,6 @@
                 <input id="confirm" name="confirm" type="password" placeholder="Confirm your password" required>
             </div>
         </div>
-        <button class="btn button-sm" type="submit">Register</button>
+        <button class="button button-sm" type="submit">Register</button>
     </form>
 {% endblock %}
