--- a/lecture10/pset10/appetieats/templates/login.html
+++ b/lecture10/pset10/appetieats/templates/login.html
@@ -28,7 +28,7 @@
                 <input id="password" name="password" class="" type="password" placeholder="Type your password" required>
             </div>
         </div>
-        <button class="btn button-sm" type="submit">Register</button>
+        <button class="button button-sm" type="submit">Register</button>
     </form>
 </div>
 {% endblock %}
