update: add block head

--- a/lecture10/pset10/appetieats/templates/layout-login-form.html
+++ b/lecture10/pset10/appetieats/templates/layout-login-form.html
@@ -18,6 +18,7 @@
         <link href="/static/register.css" rel="stylesheet">
 
         <title>AppetiEats: {% block title %}{% endblock %}</title>
+        {% block head %}{% endblock %}
 
 
     </head>
