--- a/lecture10/pset10/appetieats/static/register.css
+++ b/lecture10/pset10/appetieats/static/register.css
@@ -139,7 +139,7 @@ main {
     }
 }
 
-@media screen and (max-width: 785px) {
+@media screen and (max-width: 1064px) {
     .container-c {
         width: 90%;
         height: auto;
@@ -147,7 +147,18 @@ main {
     .input-g {
         flex-direction: column;
     }
+    .input-b {
+        width: 100% !important;
+    }
     .form form{
         width: 100%;
+    }
+    .input-g {
+        flex-direction: column;
+        z-index: 5;
+        padding-right: 0rem;
+        max-height: 30rem;
+        overflow-y: scroll;
+        flex-wrap: nowrap;
     }
 }
