feature: back button

--- a/lecture10/pset10/appetieats/templates/error.html
+++ b/lecture10/pset10/appetieats/templates/error.html
@@ -9,9 +9,13 @@
             <div class="title">
                 <h1>Error {{ error_code }} &#128560;</h1>
             </div>
+
         </div>
 
         <div class="input-g">
             <h4>{{ error_description }}</h4>
+        </div>
+        <div class="login-button">
+            <a href="javascript:history.back()">Back</a>
         </div>
 {% endblock %}
