--- a/lecture10/pset10/appetieats/templates/restaurant-setup.html
+++ b/lecture10/pset10/appetieats/templates/restaurant-setup.html
@@ -39,17 +39,13 @@
                 <label for="number" class="">Phone number: </label>
                 <input id="number" name="phone" type="number" placeholder="Type the phone number of restaurant" required>
             </div>
-            <div class="input-b">
-                <label for="number" class="">Phone number: </label>
-                <input id="number" name="phone" type="number" placeholder="Type the phone number of restaurant" required>
-            </div>
-            <div class="input-b">
-                <label for="number" class="">Phone number: </label>
-                <input id="number" name="phone" type="number" placeholder="Type the phone number of restaurant" required>
-            </div>
-            <div class="input-b">
-                <label for="number" class="">Phone number: </label>
-                <input id="number" name="phone" type="number" placeholder="Type the phone number of restaurant" required>
+            <div class="input-t">
+                <label for="monday" class="checkbox-l">
+                    <input class="checkbox-c" id="monday" name="monday" type="checkbox">
+                    Monday
+                </label>
+                <input type="time" name="opening_time" placeholder="Opening Time">
+                <input type="time" name="closing_time" placeholder="Closing Time">
             </div>
         </div>
         <button class="button button-sm" type="submit">Register</button>
