--- a/lecture10/pset10/appetieats/templates/restaurant-setup.html
+++ b/lecture10/pset10/appetieats/templates/restaurant-setup.html
@@ -2,7 +2,9 @@
 {% block head %}
 <style>
 .input-b {width: 49%;}
+.w-49 {width: 49%;}
 </style>
+<script src="static/js/register.js"></script>
 {% endblock %}
 {% block img %}
 <img src="static/undraw_cooking_p7m1.svg" alt="cooking image">
@@ -10,13 +12,12 @@
 
 {% block form %}
 <div class="form">
-    <form method="post" action="/register" >
+    <form method="post" action="#" >
         <div class="form-header">
 
             <div class="title">
                 <h1>Restaurant infos</h1>
             </div>
-
             <!--
             <div class="login-button">
                 <a href="/login">Login</a>
@@ -24,21 +25,26 @@
             -->
         </div>
 
-        <div class="input-g">
-            <div class="input-b">
-                <label for="name" class="">Restaurant name: </label>
-                <input id="name" name="name" class="" type="text" placeholder="Type the name of your restaurant" required>
-            </div>
+        <div id="firstStep">
+            <div class="input-g">
+                <div class="input-b">
+                    <label for="name" class="">Restaurant name: </label>
+                    <input id="name" name="name" class="" type="text" placeholder="Type the name of your restaurant" required>
+                </div>
 
-            <div class="input-b">
-                <label for="address" class="">Address: </label>
-                <input id="address" name="address" class="" type="text" placeholder="Type the address of your restaurant" required>
-            </div>
+                <div class="input-b">
+                    <label for="address" class="">Address: </label>
+                    <input id="address" name="address" class="" type="text" placeholder="Type the address of your restaurant" required>
+                </div>
 
-            <div class="input-b">
-                <label for="number" class="">Phone number: </label>
-                <input id="number" name="phone" type="number" placeholder="Type the phone number of restaurant" required>
+                <div class="input-b">
+                    <label for="number" class="">Phone number: </label>
+                    <input id="number" name="phone" type="number" placeholder="Type the phone number of restaurant" required>
+                </div>
             </div>
+            <button class="button button-sm" onclick="goPage(2)">Next</button>
+        </div>
+        <div id="secondStep" style="display: none;">
             <div class="input-t">
                 <label for="monday" class="checkbox-l">
                     <input class="checkbox-c" id="monday" name="monday" type="checkbox">
@@ -47,7 +53,26 @@
                 <input type="time" name="opening_time" placeholder="Opening Time">
                 <input type="time" name="closing_time" placeholder="Closing Time">
             </div>
+            <div class="input-b">
+                <label for="a" class="">Phone number: </label>
+                <input id="a" name="a" type="text" placeholder="Text" required>
+            </div>
+            <button class="button button-sm w-49" onclick="goPage(1)">Back</button>
+            <button class="button button-sm w-49" onclick="goPage(3)">Next</button>
         </div>
-        <button class="button button-sm" type="submit">Register</button>
+        <div id="thirdStep" style="display: none;">
+            <div class="input-t">
+                <p>3</p>
+            </div>
+            <button class="button button-sm w-49" onclick="goPage(2)">Back</button>
+            <button class="button button-sm w-49" onclick="goPage(4)">Next</button>
+        </div>
+        <div id="fourthStep" style="display: none;">
+            <div class="input-t">
+                <p>4</p>
+            </div>
+            <button class="button button-sm w-49" onclick="goPage(2)">Back</button>
+            <button class="button button-sm w-49" type="submit">Register</button>
+        </div>
     </form>
 {% endblock %}
