--- a/lecture10/pset10/appetieats/templates/restaurant-setup.html
+++ b/lecture10/pset10/appetieats/templates/restaurant-setup.html
@@ -29,20 +29,20 @@
             <div class="input-g">
                 <div class="input-b">
                     <label for="name" class="">Restaurant name: </label>
-                    <input id="name" name="name" class="" type="text" placeholder="Type the name of your restaurant" required>
+                    <input id="name" name="name" class="required" type="text" placeholder="Type the name of your restaurant" required>
                 </div>
 
                 <div class="input-b">
                     <label for="address" class="">Address: </label>
-                    <input id="address" name="address" class="" type="text" placeholder="Type the address of your restaurant" required>
+                    <input id="address" name="address" class="required" type="text" placeholder="Type the address of your restaurant" required>
                 </div>
 
                 <div class="input-b">
                     <label for="number" class="">Phone number: </label>
-                    <input id="number" name="phone" type="number" placeholder="Type the phone number of restaurant" required>
+                    <input id="number" name="phone" class="required" type="number" placeholder="Type the phone number of restaurant" required>
                 </div>
             </div>
-            <button class="button button-sm" onclick="goPage(2)">Next</button>
+            <button type="button" class="button button-sm" onclick="goPage(2)">Next</button>
         </div>
         <div id="secondStep" style="display: none;">
             <div class="input-t">
@@ -53,25 +53,29 @@
                 <input type="time" name="opening_time" placeholder="Opening Time">
                 <input type="time" name="closing_time" placeholder="Closing Time">
             </div>
-            <div class="input-b">
-                <label for="a" class="">Phone number: </label>
-                <input id="a" name="a" type="text" placeholder="Text" required>
+            <div class="input-t">
+                <div class="form-check form-switch">
+                    <input class="form-check-input" type="checkbox" id="tuesday">
+                    <label class="form-check-label" for="tuesday">Tuesday</label>
+                </div>
+                <input type="time" name="opening_time" placeholder="Opening Time">
+                <input type="time" name="closing_time" placeholder="Closing Time">
             </div>
-            <button class="button button-sm w-49" onclick="goPage(1)">Back</button>
-            <button class="button button-sm w-49" onclick="goPage(3)">Next</button>
+            <button type="button" class="button button-sm w-49" onclick="goPage(1)">Back</button>
+            <button type="button" class="button button-sm w-49" onclick="goPage(3)">Next</button>
         </div>
         <div id="thirdStep" style="display: none;">
             <div class="input-t">
                 <p>3</p>
             </div>
-            <button class="button button-sm w-49" onclick="goPage(2)">Back</button>
-            <button class="button button-sm w-49" onclick="goPage(4)">Next</button>
+            <button type="button" class="button button-sm w-49" onclick="goPage(2)">Back</button>
+            <button type="button" class="button button-sm w-49" onclick="goPage(4)">Next</button>
         </div>
         <div id="fourthStep" style="display: none;">
             <div class="input-t">
                 <p>4</p>
             </div>
-            <button class="button button-sm w-49" onclick="goPage(2)">Back</button>
+            <button type="button" class="button button-sm w-49" onclick="goPage(2)">Back</button>
             <button class="button button-sm w-49" type="submit">Register</button>
         </div>
     </form>
