--- a/lecture10/pset10/appetieats/templates/restaurant-setup.html
+++ b/lecture10/pset10/appetieats/templates/restaurant-setup.html
@@ -22,92 +22,164 @@
                 <a href="/login">Login</a>
             </div>
         </div>
-        <section class="step-wizard">
-            <ul class="step-wizard-list">
-                <li class="step-wizard-item current-item">
-                    <span class="progress-count">1</span>
-                    <span class="progress-label">Restaurant info</span>
-                </li>
-                <li class="step-wizard-item">
-                    <span class="progress-count">2</span>
-                    <span class="progress-label">Opening Hours</span>
-                </li>
-                <li class="step-wizard-item">
-                    <span class="progress-count">3</span>
-                    <span class="progress-label">Login Info</span>
-                </li>
-                <li class="step-wizard-item">
-                    <span class="progress-count">4</span>
-                    <span class="progress-label">Agree Terms</span>
-                </li>
-            </ul>
-        </section>
+        <div class="step-forms">
+            <section class="step-wizard">
+                <ul class="step-wizard-list">
+                    <li class="step-wizard-item current-item">
+                        <span class="progress-count">1</span>
+                        <span class="progress-label">Restaurant info</span>
+                    </li>
+                    <li class="step-wizard-item">
+                        <span class="progress-count">2</span>
+                        <span class="progress-label">Opening Hours</span>
+                    </li>
+                    <li class="step-wizard-item">
+                        <span class="progress-count">3</span>
+                        <span class="progress-label">Login Info</span>
+                    </li>
+                    <li class="step-wizard-item">
+                        <span class="progress-count">4</span>
+                        <span class="progress-label">Agree Terms</span>
+                    </li>
+                </ul>
+            </section>
 
-        <div id="firstStep">
-            <div class="input-g">
-                <div class="input-b">
-                    <label for="name" class="">Restaurant name: </label>
-                    <input id="name" name="name" class="required" type="text" placeholder="Type the name of your restaurant" required>
-                </div>
+            <div id="firstStep">
+                <div class="input-g">
+                    <div class="input-b">
+                        <label for="name" class="">Restaurant name: </label>
+                        <input id="name" name="name" class="required" type="text" placeholder="Type the name of your restaurant" required>
+                    </div>
 
-                <div class="input-b">
-                    <label for="address" class="">Address: </label>
-                    <input id="address" name="address" class="required" type="text" placeholder="Type the address of your restaurant" required>
-                </div>
+                    <div class="input-b">
+                        <label for="address" class="">Address: </label>
+                        <input id="address" name="address" class="required" type="text" placeholder="Type the address of your restaurant" required>
+                    </div>
 
-                <div class="input-b">
-                    <label for="number" class="">Phone number: </label>
-                    <input id="number" name="phone" class="required" type="number" placeholder="Type the phone number of restaurant" required>
+                    <div class="input-b">
+                        <label for="number" class="">Phone number: </label>
+                        <input id="number" name="phone" class="required" type="number" placeholder="Type the phone number of restaurant" required>
+                    </div>
                 </div>
+                <button type="button" class="button button-sm" onclick="goPage(2)">Next</button>
             </div>
-            <button type="button" class="button button-sm" onclick="goPage(2)">Next</button>
-        </div>
-        <div id="secondStep" style="display: none;">
-            <div class="input-t">
-                <label for="monday" class="checkbox-l">
-                    <input class="checkbox-c" id="monday" name="monday" type="checkbox">
-                    Monday
-                </label>
-                <input type="time" name="opening_time" placeholder="Opening Time">
-                <input type="time" name="closing_time" placeholder="Closing Time">
-            </div>
-            <div class="input-t">
-                <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="tuesday">
-                    <label class="form-check-label" for="tuesday">Tuesday</label>
+            <div id="secondStep" style="display: none;">
+                <div class="input-t">
+                    <div class="time-row">
+                        <label for="monday" class="checkbox-l">
+                            <input class="checkbox-c" id="monday" name="monday" type="checkbox">
+                            Monday
+                        </label>
+                        <input type="time" name="opening_time" placeholder="Opening Time">
+                        <input type="time" name="closing_time" placeholder="Closing Time">
+                    </div>
+                    <div class="time-row">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" id="tuesday">
+                            <label class="form-check-label" for="tuesday">Tuesday</label>
+                        </div>
+                        <input type="time" name="opening_time" placeholder="Opening Time">
+                        <input type="time" name="closing_time" placeholder="Closing Time">
+                    </div>
+                    <div class="time-row">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" id="tuesday">
+                            <label class="form-check-label" for="tuesday">Tuesday</label>
+                        </div>
+                        <input type="time" name="opening_time" placeholder="Opening Time">
+                        <input type="time" name="closing_time" placeholder="Closing Time">
+                    </div>
+                    <div class="time-row">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" id="tuesday">
+                            <label class="form-check-label" for="tuesday">Tuesday</label>
+                        </div>
+                        <input type="time" name="opening_time" placeholder="Opening Time">
+                        <input type="time" name="closing_time" placeholder="Closing Time">
+                    </div>
+                    <div class="time-row">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" id="tuesday">
+                            <label class="form-check-label" for="tuesday">Tuesday</label>
+                        </div>
+                        <input type="time" name="opening_time" placeholder="Opening Time">
+                        <input type="time" name="closing_time" placeholder="Closing Time">
+                    </div>
+                    <div class="time-row">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" id="tuesday">
+                            <label class="form-check-label" for="tuesday">Tuesday</label>
+                        </div>
+                        <input type="time" name="opening_time" placeholder="Opening Time">
+                        <input type="time" name="closing_time" placeholder="Closing Time">
+                    </div>
+                    <div class="time-row">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" id="tuesday">
+                            <label class="form-check-label" for="tuesday">Tuesday</label>
+                        </div>
+                        <input type="time" name="opening_time" placeholder="Opening Time">
+                        <input type="time" name="closing_time" placeholder="Closing Time">
+                    </div>
                 </div>
-                <input type="time" name="opening_time" placeholder="Opening Time">
-                <input type="time" name="closing_time" placeholder="Closing Time">
+                <button type="button" class="button button-sm w-49" onclick="goPage(1)">Back</button>
+                <button type="button" class="button button-sm w-49" onclick="goPage(3)">Next</button>
             </div>
-            <button type="button" class="button button-sm w-49" onclick="goPage(1)">Back</button>
-            <button type="button" class="button button-sm w-49" onclick="goPage(3)">Next</button>
-        </div>
-        <div id="thirdStep" style="display: none;">
-            <div class="input-g">
-                <div class="input-b">
-                    <label for="username" class="">Username: </label>
-                    <input id="username" name="username" class="required" type="text" placeholder="Type your username" required>
-                </div>
+            <div id="thirdStep" style="display: none;">
+                <div class="input-g">
+                    <div class="input-b">
+                        <label for="username" class="">Username: </label>
+                        <input id="username" name="username" class="required" type="text" placeholder="Type your username" required>
+                    </div>
 
-                <div class="input-b">
-                    <label for="password" class="">Password: </label>
-                    <input id="password" name="password" class="required" type="password" placeholder="Type your password" required>
-                </div>
+                    <div class="input-b">
+                        <label for="password" class="">Password: </label>
+                        <input id="password" name="password" class="required" type="password" placeholder="Type your password" required>
+                    </div>
 
-                <div class="input-b">
-                    <label for="confirm" class="">Confirm password: </label>
-                    <input id="confirm" name="confirm" class="required" type="password" placeholder="Confirm your password" required>
+                    <div class="input-b">
+                        <label for="confirm" class="">Confirm password: </label>
+                        <input id="confirm" name="confirm" class="required" type="password" placeholder="Confirm your password" required>
+                    </div>
                 </div>
+                <button type="button" class="button button-sm w-49" onclick="goPage(2)">Back</button>
+                <button type="button" class="button button-sm w-49" onclick="goPage(4)">Next</button>
             </div>
-            <button type="button" class="button button-sm w-49" onclick="goPage(2)">Back</button>
-            <button type="button" class="button button-sm w-49" onclick="goPage(4)">Next</button>
-        </div>
-        <div id="fourthStep" style="display: none;">
-            <div class="input-g">
-                <p>agree terms</p>
+            <div id="fourthStep" style="display: none;">
+                <div class="input-t">
+                    <h6 class="text-center"> 
+                        Terms of Use:
+                    </h6>
+                    <p> 
+                    By using this system, the user agrees to the terms and conditions set forth herein. This is a college project for educational purposes and is not intended to be a commercial product. The system is provided "as is," without warranties of any kind, express or implied.
+
+                    1. Data Collection:
+                    The user understands and agrees that, for the proper functioning of the system, some personal data may be collected. This information will be used solely for academic purposes and will not be shared with third parties without the user's express consent.
+
+                    2. Liability:
+                    The developer of this system is not liable for any damages, losses, or issues arising from the use of the system. The user agrees to use the system at their own risk.
+
+                    3. Proper Use:
+                    The user agrees to use the system solely for academic purposes and not for any commercial or illegal purposes. Any misuse of the system is strictly prohibited.
+
+                    4. Privacy and Security:
+                    The developer will make reasonable efforts to protect the privacy and security of user data. However, due to the nature of the project and the academic environment, we cannot guarantee the total security of the data.
+
+                    5. Termination of Access:
+                    The developer reserves the right to terminate the user's access to the system at any time without prior notice if abuses or violations of the terms of use are identified.
+
+                    6. Intellectual Property:
+                    The user acknowledges that the system is an academic creation and agrees to respect all copyrights and intellectual property rights related to the project.
+
+                    7. Modifications to the Terms:
+                    The developer reserves the right to change these terms of use at any time with prior notice to the user or by updating this system.
+
+                    By clicking the acceptance button or continuing to use the system, the user agrees to be legally bound by these terms of use.
+                    </p>
+                </div>
+                <button type="button" class="button button-sm w-49" onclick="goPage(3)">Back</button>
+                <button class="button button-sm w-49" type="submit">Register</button>
             </div>
-            <button type="button" class="button button-sm w-49" onclick="goPage(3)">Back</button>
-            <button class="button button-sm w-49" type="submit">Register</button>
         </div>
     </form>
 {% endblock %}
