--- a/lecture10/pset10/appetieats/templates/restaurant-setup.html
+++ b/lecture10/pset10/appetieats/templates/restaurant-setup.html
@@ -60,6 +60,10 @@
                         <label for="number" class="">Phone number: </label>
                         <input id="number" name="phone" class="required" type="number" placeholder="Type the phone number of restaurant" required>
                     </div>
+                    <div class="input-b">
+                        <label for="color" class="">Color theme: </label>
+                        <input id="color" name="color" class="required" type="color" placeholder="Select the color of restaurant" value="#ff0000" required>
+                    </div>
                 </div>
                 <button type="button" class="button button-sm" onclick="goPage(2)">Next</button>
             </div>
@@ -127,7 +131,7 @@
             </div>
             <div id="thirdStep" style="display: none;">
                 <div class="input-g">
-                    <div class="input-b">
+                    <div class="input-b w-100">
                         <label for="username" class="">Username: </label>
                         <input id="username" name="username" class="required" type="text" placeholder="Type your username" required>
                     </div>
@@ -152,30 +156,51 @@
                     </h6>
                     <p> 
                     By using this system, the user agrees to the terms and conditions set forth herein. This is a college project for educational purposes and is not intended to be a commercial product. The system is provided "as is," without warranties of any kind, express or implied.
+                    </p> 
 
+                    <p> 
                     1. Data Collection:
                     The user understands and agrees that, for the proper functioning of the system, some personal data may be collected. This information will be used solely for academic purposes and will not be shared with third parties without the user's express consent.
+                    </p> 
 
+                    <p> 
                     2. Liability:
                     The developer of this system is not liable for any damages, losses, or issues arising from the use of the system. The user agrees to use the system at their own risk.
+                    </p> 
 
+                    <p> 
                     3. Proper Use:
                     The user agrees to use the system solely for academic purposes and not for any commercial or illegal purposes. Any misuse of the system is strictly prohibited.
+                    </p> 
 
+                    <p> 
                     4. Privacy and Security:
                     The developer will make reasonable efforts to protect the privacy and security of user data. However, due to the nature of the project and the academic environment, we cannot guarantee the total security of the data.
+                    </p> 
 
+                    <p> 
                     5. Termination of Access:
                     The developer reserves the right to terminate the user's access to the system at any time without prior notice if abuses or violations of the terms of use are identified.
+                    </p> 
 
+                    <p> 
                     6. Intellectual Property:
                     The user acknowledges that the system is an academic creation and agrees to respect all copyrights and intellectual property rights related to the project.
+                    </p> 
 
+                    <p> 
                     7. Modifications to the Terms:
                     The developer reserves the right to change these terms of use at any time with prior notice to the user or by updating this system.
+                    </p> 
 
+                    <p> 
                     By clicking the acceptance button or continuing to use the system, the user agrees to be legally bound by these terms of use.
                     </p>
+                    <div>
+                        <input class="checkbox-c" id="agree" name="agree" type="checkbox" required>
+                        <label for="agree" class="checkbox-l">I Agree Terms</label>
+                    </div>
+
                 </div>
                 <button type="button" class="button button-sm w-49" onclick="goPage(3)">Back</button>
                 <button class="button button-sm w-49" type="submit">Register</button>
